Fixed scrollbar showing on userpanel when not needed

--- a/src/App.css
+++ b/src/App.css
@@ -308,7 +308,7 @@ button {
   padding: 0;
   margin: 0;
   list-style: none;
-  overflow-y: scroll;
+  overflow-y: auto;
   max-height: 20rem;
 }
 
